# deck-ds

./: .eslintrc  .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  REFACTOR.md  decky.pyi  main.py  package.json  plugin.json  pnpm-lock.yaml  rollup.config.js  rollup.config.mjs  tsconfig.json
.github/: FUNDING.yml
backend/: ARCHITECTURE.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  build-docker.sh  build.rs  entrypoint.sh
backend/$HOME/.config/deck-ds/: profiles.db
backend/assets/autostart/: deck-ds.desktop
backend/assets/kwin/: emulatorwindowing-1.0.kwinscript  emulatorwindowing-v1.0.kwinscript  emulatorwindowing.kwinscript  truevideowall.kwinscript
backend/assets/secondary_apps/: flatpak.default.json
backend/schema/: schema.json
backend/src/: api.rs  asset.rs  autostart.rs  client_pipeline.rs  config.rs  consts.rs  db.rs  decky_env.rs  lib.rs  macros.rs  main.rs  native_model_serde_json.rs  pipeline.rs  process.rs  secondary_app.rs  settings.rs  sys.rs  ui_test.rs  util.rs
backend/src/api/: autostart.rs  client_pipeline.rs  general.rs  profile.rs  request_handler.rs  secondary_app.rs
backend/src/db/: common.rs  convert.rs  migrate.rs  model.rs  profile_db.rs  settings_db.rs  templates.rs
backend/src/db/codec/: rmp_serde_1_3.rs
backend/src/db/common/: model.rs
backend/src/db/common/model/: v1.rs
backend/src/db/convert/: ext.rs  ro.rs  rw.rs
backend/src/db/model/: v1.rs
backend/src/db/profile_db/: convert.rs  model.rs  templates.rs
backend/src/db/profile_db/convert/: ext.rs  ro.rs  rw.rs
backend/src/db/profile_db/model/: v1.rs
backend/src/db/settings_db/: convert.rs  model.rs
backend/src/db/settings_db/model/: v1.rs
backend/src/pipeline/: action.rs  action_lookup.rs  action_registar.rs  common.rs  config.rs  data.rs  dependency.rs  executor.rs  registar.rs
backend/src/pipeline/action/: cemu_audio.rs  cemu_config.rs  cemu_layout.rs  citra_config.rs  citra_layout.rs  desktop.rs  desktop_controller_layout_hack.rs  desktop_session_handler.rs  display_config.rs  display_restoration.rs  display_teardown.rs  emu.rs  launch_secondary_app.rs  lime_3ds_layout.rs  melonds_config.rs  melonds_layout.rs  multi_window.rs  source_file.rs  toplevel.rs  ui_management.rs  version_matchers.rs  virtual_screen.rs
backend/src/pipeline/action/desktop/: common.rs  desktop_controller_layout_hack.rs  display_config.rs  session_handler.rs  touch_config.rs
backend/src/pipeline/action/desktop/session_handler/: ui.rs
backend/src/pipeline/action/desktop_session_handler/: ui.rs
backend/src/pipeline/action/emu/: cemu_audio.rs  cemu_layout.rs  citra_layout.rs  emu_source.rs  lime_3ds_layout.rs  melonds_layout.rs
backend/src/pipeline/action/multi_window/: launch_secondary_app.rs  main_app_automatic_windowing.rs  primary_windowing.rs  secondary_app.rs
backend/src/pipeline/action/multi_window/launch_secondary_app/: launch_secondary_app.rs  launch_secondary_app_preset.rs  secondary_app_options.rs
backend/src/pipeline/action/multi_window/primary_windowing/: cemu_options.rs  citra_options.rs  custom_options.rs  dolphin_options.rs
backend/src/pipeline/action/multi_window/secondary_app/: launch_secondary_app_preset.rs  launch_secondary_flatpak_app.rs  secondary_app_options.rs
backend/src/pipeline/action/toplevel/: platform_select.rs
backend/src/pipeline/action/ui_management/: ui.rs
backend/src/pipeline/db/: convert.rs
backend/src/pipeline/db/codec/: rmp_serde_1_3.rs
backend/src/pipeline/db/convert/: ro.rs
backend/src/pipeline/dependency/: emulator_windowing.rs  true_video_wall.rs
backend/src/pipeline/executor/: ui.rs
backend/src/pipeline/profile_db/: codec.rs  convert.rs  migrate.rs
backend/src/pipeline/profile_db/convert/: ro.rs  rw.rs
backend/src/pipeline/profile_db/model/: v1.rs
backend/src/settings/: autostart.rs  db.rs  patch.rs  templates.rs
backend/src/settings/db/: convert.rs  model.rs  transform.rs
backend/src/sys/: app_process.rs  audio.rs  display_info.rs  flatpak.rs  kwin.rs  process.rs  steam.rs  steamos_session_select.rs  windowing.rs  x_display.rs  x_touch.rs
backend/src/sys/kwin/: screen_tracking.rs  window_tracking.rs
backend/src/sys/x_display/: x_display_handle.rs  x_touch.rs
backend/test/assets/cemu/: settings.xml
backend/test/assets/citra/: qt-config.ini
backend/test/assets/melonds/: melonDS.ini
defaults/autostart/: deck-ds.desktop
defaults/kwin/: 301023-multiwindowfullscreen-1.0.kwinscript
schema/: schema.json
src/: backend.ts  index.tsx  result.ts
src/Settings/: SettingsRouter.tsx
src/components/: ActionChild.tsx  ActionIcon.tsx  AddConfigurableAudioDeviceModal.tsx  AddGamepadButtonModal.tsx  AppDefaultProfileDropdown.tsx  ConfigErrorModal.tsx  ConfigErrorWarning.tsx  CreateProfileFromCollectionModal.tsx  CreateProfileModal.tsx  EditAction.tsx  EditExitHooks.tsx  EditHooks.tsx  FocusableRow.tsx  HandleLoading.tsx  IconForTarget.tsx
src/context/: appContext.tsx  configErrorContext.tsx  modifiablePipelineContext.tsx  serverApiContext.tsx  shortAppDetailsContext.tsx
src/hooks/: useAppOverridePipeline.ts  useAppSettings.ts  useAppTarget.ts  useAudioDeviceInfo.ts  useDisplayInfo.ts  useEnsureAppOverridePipeline.ts  useGlobalSettings.ts  useLaunchActions.ts  useLaunchActions.tsx  usePipelineActions.ts  usePluginInfo.ts  useProfile.ts  useProfiles.ts  useReifiedPipeline.ts  useSecondaryAppPresetInfo.ts  useTemplate.ts  useTemplates.ts  useToplevel.ts
src/lib/: DesktopPlayButton.tsx  GameModePlayButton.tsx  patchLibraryApp.tsx
src/patch/: patchContextMenu.tsx  patchHandler.ts  patchLibraryApp.tsx  tmp.tsx
src/pipeline/: client_pipeline.ts
src/settings/: SettingsRouter.tsx
src/types/: app.d.ts  appStore.d.ts  backend_api.d.ts  collectionStore.d.ts  narrowing.ts  short.d.ts  short.ts  types.d.ts
src/usdpl_front/: README.md  package.json  rebuild.sh  usdpl_front.d.ts  usdpl_front.js  usdpl_front_bg.wasm  usdpl_front_bg.wasm.d.ts
src/util/: debugPrint.ts  display.ts  loading.ts  log.ts  option.ts  patch.ts  patchPipeline.ts  patch_pipeline.ts  result.ts  util.ts
(+34 files in other folders)
