[package]
name = "deck-ds"
version = "0.1.0"
edition = "2021"
authors = ["SteelSavant <steelsavant@gmail.com>"]
description = "Backend functionality for DeckDS plugin"
license = "GPL-3.0-only"
repository = "https://github.com/SteelSavant/deckds"
keywords = ["dual-screen", "emulation", "decky"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usdpl-back = { version = "0.10.1", features = ["blocking"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
async-trait = { version = "0.1" }

# logging
log = "0.4"
simplelog = "0.12"

# ureq's tls feature does not like musl targets
ureq = { version = "2", features = [
    "json",
    "gzip",
    "brotli",
    "charset",
], default-features = false, optional = true }
clap = { version = "4.4.6", features = ["derive"] }
derive_more = "0.99.17"
indexmap = { version = "2.0.2", features = ["serde"] }
schemars = { version = "0.8.15", features = [
    "indexmap2",
    "uuid1",
    "impl_json_schema",
] }

typemap = "0.3.3"
anyhow = { version = "1.0.75", features = ["backtrace"] }
gilrs = "0.10.2"
rand = "0.8.5"
nix = { version = "0.27.1", features = ["process", "zerocopy", "signal"] }
edid = "0.3.0"
float-cmp = "0.9.0"
enum_delegate = "0.2.0"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
xrandr = { git = "https://github.com/dzfranklin/xrandr-rs", features = [
    "serialize",
] }
shellexpand = "3.1.0"
include_dir = "0.7.3"

[features]
default = ["online", "decky"]
decky = ["usdpl-back/decky"]
encrypt = ["usdpl-back/encrypt"]
online = ["ureq"]
dev_stuff = []

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 1

[profile.docker]
inherits = "release"
debug = false
strip = true
lto = "thin"
codegen-units = 16
opt-level = 2
debug-assertions = false
overflow-checks = false

[dev-dependencies]
pretty_assertions = "1.4.0"
