[package]
name = "deck-ds"
version = "0.2.0"
edition = "2021"
authors = ["SteelSavant <steelsavant@gmail.com>"]
description = "Backend functionality for DeckDS plugin"
license = "GPL-3.0-only"
repository = "https://github.com/SteelSavant/deckds"
keywords = ["dual-screen", "emulation", "decky"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usdpl-back = { version = "0.10.1", features = ["blocking"] }
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0"
async-trait = { version = "0.1" }

# logging
log = "0.4"
simplelog = "0.12"

# ureq's tls feature does not like musl targets
ureq = { version = "2", features = [
    "json",
    "gzip",
    "brotli",
    "charset",
], default-features = false, optional = true }
clap = { version = "4.4.6", features = ["derive"] }
derive_more = "0.99.17"
indexmap = { version = "^2.1.0", features = ["serde"] }
schemars = { version = "0.8.15", features = ["indexmap2", "uuid1", "either"] }
anyhow = { version = "1.0.75", features = ["backtrace"] }
gilrs = "0.10.2"
rand = "0.8.5"
nix = { version = "0.27.1", features = ["process", "zerocopy", "signal"] }
float-cmp = "0.9.0"
enum_delegate = "0.2.0"
uuid = { version = "^1.6.0", features = ["serde", "v4"] }
xrandr = { git = "https://github.com/dzfranklin/xrandr-rs", features = [
    "serialize",
] }
shellexpand = "3.1.0"
include_dir = "0.7.3"
lazy_static = "1.4.0"
dirs = "5.0.1"
which = "5.0.0"
either = { version = "1.9.0", features = ["serde"] }
configparser = { version = "3.0.3", features = ["indexmap"] }
strum = { version = "0.25.0", features = ["std", "derive"] }
native_db = { version = "0.5.3", features = ["uuid"] }
native_model = { version = "0.4.10" }
once_cell = "1.19.0"
egui = "0.25.0"
eframe = "0.25.0"
winit = "0.29.9"
type_reg = { version = "0.7.0", features = ["untagged"] }
thiserror = "1.0.56"
smart-default = "0.7.1"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
testing_logger = "0.1.1"
edid-rs = "0.1.0"
typemap-ors = "1.0.0"
str-distance = "0.1.0"
serde_with = "3.8.1"
dbus = "0.9.7"
tempfile = "3.10.1"

[features]
default = ["online", "decky"]
decky = ["usdpl-back/decky"]
encrypt = ["usdpl-back/encrypt"]
online = ["ureq"]
dev_stuff = []

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 1

[profile.docker]
inherits = "release"
debug = false
strip = true
lto = "thin"
codegen-units = 16
opt-level = 2
debug-assertions = false
overflow-checks = false
split-debuginfo = "packed"

[dev-dependencies]
pretty_assertions = "1.4.0"
